--- a/main.tex
+++ b/main.tex
@@ -115,6 +115,7 @@ gdzie:
 \end{itemize}
 
 Istnieje również funkcja aktywacji softmax, która dla danego wektora wyników \( \mathbf{z} = (z_1, z_2, \ldots, z_n) \), gdzie \( n \) oznacza liczbę klas, przekształca każdy element \( z_i \) na wartość prawdopodobieństwa \( p_i \).
+
 Funkcję softmax można zdefiniować w następujący sposób:
 \[
     f(z)_i = \frac{e^{z_i}}{\sum_{j=1}^{n} e^{z_j}}
@@ -143,9 +144,7 @@ gdzie:
 Ostatnią funkcją aktywacji, którą wykorzystałem jest tangens hiperboliczny.
 Funkcja ta może zostać użyta zarówno do warstw ukrytych jak i warstwy ostatniej.
 Funkcję można zdefiniować w następujący sposób:
-
 \[\text{tanh}(x) = \frac{{\exp(x) - \exp(-x)}}{{\exp(x) + \exp(-x)}}\]
-
 Wartości tej funkcji mieszczą się w zakresie (-1; 1).
 Funkcja kształtem przypomina funkcję sigmoidalną.
 Warto wspomnieć o tym, że ta funkcja jest bardziej wrażliwa na duże wartości wejściowe niż funkcja sigmoidalna, co może prowadzić do problemów z gradientem w czasie uczenia sieci.
@@ -160,7 +159,6 @@ Propagacja wsteczna umożliwia obliczenie gradientów wag sieci na podstawie fun
     \caption{Sieć głęboka [5]}
     \label{fig:siec}
 \end{figure}
-
 
 Proces uczenia sieci głębokich rozpoczyna się od inicjalizacji wag, które mogą być inicjalizowane losowo lub przy użyciu innych metod.
 Następnie dane wejściowe są przekazywane od warstwy wejściowej do warstwy wyjściowej (ang. forward propagation).
@@ -241,7 +239,7 @@ gdzie:
     \item \(v_t\) to estymacja drugiego momentu gradientu w kroku czasowym \(t\).
     \item \(\beta_1\) i \(\beta_2\) to współczynniki z zakresu \([0, 1)\) kontrolujące eksponencjalne wygładzanie momentu i drugiego momentu.
     \item \(\alpha\) to współczynnik uczenia (learning rate).
-    \item \(\epsilon\) to mała wartość (np. \(10^{-8}\)) używana w celu uniknięcia dzielenia przez zero.
+    \item \(\epsilon\) to mała wartość (np. \(10^{-10}\)) używana w celu uniknięcia dzielenia przez zero.
     \item \(\hat{m}_t\) i \(\hat{v}_t\) to wygładzone estymacje momentu i drugiego momentu.
     \item \(W_{t}\) i \(W_{t+1}\) to wagi w krokach czasowych \(t\) i \(t+1\).
 \end{itemize}
@@ -249,7 +247,7 @@ Przy użyciu tych wzorów, w metodzie optymalizacji ADAM aktualizuje się wagi s
 To pozwala na efektywną optymalizację sieci głębokiej, dostosowując krok uczenia (learning rate) dla każdej wagi indywidualnie.
 \section{Realizacja sieci neuronowej}
 \subsection{Opis skryptu}
-Skrypt został podzielony na kilka innych, w zależności od celu.
+Główny skrypt został podzielony na kilka innych w zależności od zastosowania.
 Każdy z nich dotyczy tego jak zmienia się poprawność klasyfikacji w zależności od różnych parametrów.
 Wszystkie skrypty mają taką samą wspólną, początkową część, która zawiera przetwarzanie danych zawartych w pliku `parkinsons.txt'.
 Dane podlegają normalizacji, sortowaniu i zapisaniu do pliku `parkinsons.hkl'.
@@ -390,10 +388,10 @@ ax.view_init(30, 200)
 plt.savefig("Fig.1_PK_K1K2_pytorch_parkinsons.png", bbox_inches="tight")
 \end{verbatim}
 
-Na początku skryptu zostaje zdefiniowana klasa Model, która dziedziczy po module `nn.Module'.
+Na początku skryptu zostaje zdefiniowana klasa `Model', która dziedziczy po module `nn.Module'.
 Jest to model sieci neuronowej.
-W konstruktorze zdefiniowana zostaje struktura modelu, tzn. warstwy liniowe `nn.Linear' i ich rozmiary.
-W klasie zostaje zdefiniowana metoda `forward', która definiuje przepływ danych przez model.
+W konstruktorze klasy zostaje zdefiniowana struktura modelu, tzn. warstwy liniowe `nn.Linear' i ich rozmiary.
+W klasie zostaje również zdefiniowana metoda `forward', która definiuje przepływ danych przez model.
 Metoda wykorzystuje funkcje aktywacji ReLU oraz funkcję softmax na ostatniej warstwie.
 Później następuje definicja parametrów uczenia, których definicja znajduje się poniżej:
 \begin{itemize}
@@ -408,11 +406,11 @@ Później następuje definicja parametrów uczenia, których definicja znajduje 
 \end{itemize}
 
 Zagnieżdżone pętle `for' iterują po rozmiarach `K1' oraz `K2'.
-Tworzony jest model z odpowiednimi rozmiarami warstw i definiowany jest optymalizator (ADAM) oraz funkcja kosztu.
+Tworzony jest model z odpowiednimi rozmiarami warstw i definiowany jest optymalizator `ADAM' oraz funkcja kosztu.
 W pętli treningowej obliczane są predykcje modelu, strata oraz aktualizowane są wagi modelu.
 Po zakończeniu treningu, obliczana jest ocena `PK' dla danych testowych.
 Jeżeli aktualna poprawność klasyfikacji jest większa od dotychczasowej, maksymalnej, aktualizowane są odpowiednie zmienne.
-Na końcu skryptu, tworzony jest wykres 3D, w którym oś X reprezentuje `K1', oś Y reprezentuje `K2', natomiast oś Z reprezentuje poprawność klasyfikacji `PK'.
+Na końcu skryptu, tworzony jest wykres 3D, w którym oś X reprezentuje `K1', oś Y reprezentuje `K2' oraz oś Z reprezentuje poprawność klasyfikacji `PK'.
 Wykres jest zapisywany jako obraz z rozszerzeniem PNG.
 \subsection{Skrypt dla zależności poprawności klasyfikacji od liczby warstw oraz współczynnika uczenia [6]}
 \begin{verbatim}
@@ -493,9 +491,9 @@ plt.show()
 Względem poprzedniego skryptu, klasa Model uległa zmianie.
 Konstruktor tej klasy inicjalizuje kolejne warstwy sieci, na podstawie przekazanej listy `K'.
 Lista `K' zawiera liczbę neuronów dla poszczególnych warstw.
-Występują również dwie zagnieżdżone pętle, które iterują po liczbie warstw z zakresu 3 - 10 oraz po współczynniku uczenia.
+Występują również dwie zagnieżdżone pętle, które iterują po liczbie warstw z zakresu 3 - 10 oraz po współczynniku uczenia z zakresu $10^-1$ - $10^-7$.
 Założono, że liczba neuronów w danej warstwie będzie wynosić `K1', jeżeli numer warstwy jest parzysty oraz `K2' w przeciwnym wypadku.
-Na końcu rysowany jest wykres zależności poprawności klasyfikacji od liczby warstw w sieci i współczynniku uczenia.
+Na końcu rysowany jest wykres zależności poprawności klasyfikacji od liczby warstw sieci i współczynniku uczenia.
 \subsection{Skrypt dla zależności poprawności klasyfikacji od liczby warstw oraz współczynnika uczenia [6]}
 \begin{verbatim}
 class Model(nn.Module):
@@ -556,18 +554,16 @@ plt.show()
 \end{verbatim}
 
 Konstruktor klasy `Model' został uzupełniony o przekazywaną funkcję aktywacji.
-W kodzie pojawiła się również lista `activations', która zawiera funkcję aktywacji takie jak ReLU, tangens hiperboliczny oraz funkcję sigmoidalną.
+W kodzie pojawiła się również lista `activations', która zawiera funkcje aktywacji takie jak ReLU, tangens hiperboliczny oraz funkcję sigmoidalną.
 Dalsza część skryptu polega na iteracji po tej liście.
-Obliczana jest maksymalna poprawność klasyfikacji w zależności od użytej funkcji aktywacji.
-Na końcu rysowany jest wykres zależności poprawności klasyfikacji od użytej funkcji przejścia.
-
+Obliczana jest maksymalna poprawność klasyfikacji w zależności od użytej funkcji aktywacji oraz na końcu rysowany jest wykres tej zależności.
 \section{Eksperymenty}
-Dla każdego eksperymentu został użyty inny skrypt.
+Dla każdego eksperymentu został użyty nieco inny skrypt.
 Pierwsze eksperymenty dotyczą rozmiaru warstw dla sieci trójwarstwowej, natomiast kolejne dotyczą zmian współczynniku uczenia, liczby warstw oraz funkcji przejścia.
 \subsection{Eksperyment 1}
 Eksperyment pierwszy został przeprowadzony dla przykładowych liczb neuronów będących wielokrotnościami liczby 2.
 Warstwy pierwsza i druga zawierają liczbę neuronów z zakresu 2 - 30.
-Współczynnik uczenia wynosi $0.1$, natomiast liczba epok $100$.
+Współczynnik uczenia wynosi $0.1$, natomiast liczba epok to $100$.
 \begin{figure}[H]
     \centering
     \includegraphics[width=0.8\textwidth, keepaspectratio]{k1_k2_1.png}
@@ -575,40 +571,41 @@ Współczynnik uczenia wynosi $0.1$, natomiast liczba epok $100$.
     \label{fig:k1k2_1}
 \end{figure}
 Dla danych metaparametrów wykres jest płaski.
-Poza punktami dla małej liczby neuronów w warstwie K2, dominującą wartością poprawności klasyfikacji jest $79.48$.
+Poza punktami dla małej liczby neuronów w warstwie K2, dominującą wartością poprawności klasyfikacji jest $79.48\%$.
 Oznacza, to że rozmiary warstw mogą mieć minimalny wpływ na wydajność sieci dla takich metaparametrów.
-Hipoteza zostanie zweryfikowana w drugim eksperymencie.
-Semioptymalne wartości to: K1 = 6, K2 = 4, PK(K1, K2) = $87.17$.
+Powyższa hipoteza zostanie zweryfikowana w drugim eksperymencie.
+Semioptymalne wartości to: `K1' = 6, `K2' = 4, PK(K1, K2) = $87.17\%$.
 \subsection{Eksperyment 2}
 Tym razem warstwa pierwsza i druga zawierają liczbę neuronów z zakresu 2 - 200.
-Pozostałe parametry pozostały bez zmian.
+Pozostałe parametry są niezmienione.
 \begin{figure}[H]
     \centering
     \includegraphics[width=0.8\textwidth, keepaspectratio]{k1_k2_2.png}
     \caption{Zależność poprawności klasyfikacji od liczby neuronów z zakresu 2-200 z krokiem 2}
     \label{fig:k1k2_2}
 \end{figure}
-Sieć uczyła się zdecydowanie dłużej. Okazało się jednak, że hipoteza z eksperymentu pierwszego jest prawdziwa.
+Sieć uczyła się zdecydowanie dłużej.
+Okazało się jednak, że hipoteza z eksperymentu pierwszego jest prawdziwa.
 Wykres jest płaski również dla większej liczby neuronów.
-Minimalnie wzrosła też maksymalna poprawność klasyfikacji z $87.17$ do $92.30$ dla K1 = 90 oraz K2 = 8.
+Minimalnie wzrosła maksymalna poprawność klasyfikacji z $87.17\%$ do $92.30\%$ dla K1 = 90 oraz K2 = 8.
 \subsection{Eksperyment 3}
-Eksperyment trzeci, będzie polegał na szukaniu takich metaparametrów, aby dodać nieco głębi do wykresu.
-Zmienione zostaną teraz również inne parametry.
-Tym razem współczynnik uczenia będzie wynosić $0.001$, a maksymalna liczba epok $1000$.
-Warstwa pierwsza i druga zawierają liczbę neuronów z zakresu 10 - 400 z krokiem 10.
+Plan trzeciego eksperymentu zakłada poszukiwanie takich metaparametrów aby wzbogacić wykres o większą głębię.
+Zmienione zostaną pozostałe parametry, nie tylko liczba neuronów w danej warstwie.
+Tym razem współczynnik uczenia będzie wynosić $0.001$, a maksymalna liczba epok to $1000$.
+Warstwa pierwsza i druga będą zawierać liczbę neuronów z zakresu 10 - 400 z krokiem 10.
 \begin{figure}[H]
     \centering
     \includegraphics[width=0.8\textwidth, keepaspectratio]{k1_k2_3.png}
     \caption{Zależność poprawności klasyfikacji od liczby neuronów z zakresu 10-400 z krokiem 10}
     \label{fig:k1k2_3}
 \end{figure}
-Jak widać na powyższym rysunku, sieć zachowuje się chaotycznie utrzymując jednak dosyć wysoki poziom poprawności klasyfikacji.
+Jak widać na powyższym rysunku, sieć zachowuje się chaotycznie utrzymując jednak wciąż dosyć wysoki poziom poprawności klasyfikacji.
+Dla takich parametrów wykres nie jest już tak płaski jak w poprzednich eksperymentach.
 \subsection{Eksperyment 4}
-Tym razem eksperyment będzie polegał na zmianie liczby warstw oraz współczynniku uczenia sieci.
-Wykorzystany został do tego różniący się od poprzedniego skrypt.
+Eksperyment czwarty będzie polegał na zmianie liczby warstw oraz współczynniku uczenia sieci.
+W tym celu użyto innego skryptu niż ten wykorzystany w poprzednich eksperymentach.
 Liczba neuronów wynosi 6, jeżeli indeks warstwy jest parzysty oraz 4 w przeciwnym wypadku.
-Liczba epok to 100, a maksymalna liczba warstw to 10.
-
+Liczba epok została ustawiona na 100, a maksymalna liczba warstw, na których będą przeprowadzane testy, wynosi 10.
 \begin{figure}[H]
     \centering
     \includegraphics[width=0.8\textwidth, keepaspectratio]{LR_LAYERS_100ECHO.PNG}
@@ -618,28 +615,26 @@ Liczba epok to 100, a maksymalna liczba warstw to 10.
 
 Dla zmniejszającego się współczynnika uczenia, sieć zachowuje się bardziej nieprzewidywalnie.
 Z wykresu wynika, że liczba warstw nie ma tak dużego wpływu na uczenie się sieci.
-Znowu dominuje poprawność klasyfikacji na poziomie około 79.
-Być może liczba epok wynosząca 100 jest zbyt mała.
+Znowu dominuje poprawność klasyfikacji na poziomie około $79\%$.
+Możliwe, że liczba 100 epok jest niewystarczająca.
 Kolejny eksperyment to zweryfikuje.
 
 \subsection{Eksperyment 5}
-Eksperyment będzie analogiczny do poprzedniego, z tym że liczba epok wzrośnie do 3000.
-
-Przy liczbie warstw większej od 5 oraz współczynniku uczenia mniejszym od $10^-6$ sieć zachowuje się niestabilnie.
-Jest to podobne zjawisko do tego w poprzednim eksperymencie.
-Liczba epok nie ma tu zbyt wielkiego znaczenia.
-PK dla 9 warstw oraz LR 0.1 84 procent max
-
+Eksperyment będzie przeprowadzony w sposób analogiczny do poprzedniego, ale liczba epok zostanie zwiększona do 3000.
 \begin{figure}[H]
     \centering
     \includegraphics[width=0.8\textwidth, keepaspectratio]{LR_LAYERS_3000ECHO.PNG}
     \caption{Zależność poprawności klasyfikacji od liczby warstw i współczynniku uczenia}
     \label{fig:lr_layers_2}
 \end{figure}
+Przy liczbie warstw większej od 5 oraz współczynniku uczenia mniejszym od $10^-6$ sieć wykazuje niestabilne zachowanie.
+To zjawisko jest podobne do obserwowanego w poprzednim eksperymencie.
+Liczba epok nie ma tu zbyt wielkiego znaczenia.
+Najlepszy wynik poprawności klasyfikacji uzyskano przy użyciu 9 warstw i współczynnika uczenia wynoszącego $0.1$, co dało wynik na poziomie $84$\%.
 
 \subsection{Eksperyment 6}
-Eksperyment ten sprawdzi co stanie się, gdy zwiększymy liczbę neuronów dla `K1' = 1500 oraz `K2' = 1000.
-Liczba epok zostanie przywrócona na 100.
+Eksperyment ten sprawdzi co się stanie, gdy zwiększymy liczbę neuronów dla `K1' do 1500 oraz `K2' do 1000.
+Liczba epok zostanie przywrócona do 100.
 
 \begin{figure}[H]
     \centering
@@ -648,17 +643,16 @@ Liczba epok zostanie przywrócona na 100.
     \label{fig:lr_layers_3}
 \end{figure}
 
-Okazało się, że wynik jest podobny.
-Przy liczbie warstw większej od 5 oraz współczynniku uczenia mniejszym od $10^-6$ sieć zachowuje się niestabilnie.
-Dla przeciwnych wartości dominuje identyczna wartość poprawności klasyfikacji tzn. 79.
-Dla LR: $0.001$, L warstw 4 PK 87
-
+Wyniki okazały się być podobne.
+W przypadku liczby warstw większej niż 5 oraz współczynnika uczenia mniejszego od $10^{-6}$, sieć nadal wykazuje niestabilne zachowanie.
+Dla pozostałych wartości, poprawność klasyfikacji utrzymuje się na identycznym poziomie, wynoszącym $79\%$.
+Najlepszy wynik poprawności klasyfikacji uzyskano przy użyciu 4 warstw i współczynnika uczenia wynoszącego $0.001$, co dało rezultat na poziomie $87\%$.
 
 \subsection{Eksperyment 7}
-Tym razem zostanie zbadany wpływ użytej funkcji przejścia.
-Dotychczas do warstwy pierwszej oraz ukrytych była używana funkcja ReLU.
-Dla porównania wykorzystane zostaną funkcje aktywacji takie jak sigmoidalna oraz tangens hiperboliczny.
-Eksperyment zostanie przeprowadzony dla suboptymalnych wartości z eksperymentu pierwszego: `K1' = 6, `K2' = 4, współczynnik uczenia wynosi $0.1$ natomiast liczba epok to 100.
+Tym razem badany będzie wpływ różnych funkcji aktywacji na poprawność klasyfikacji.
+Dotychczas w warstwie pierwszej oraz w warstwach ukrytych używana była funkcja ReLU.
+W celu porównania, zostaną wykorzystane funkcje aktywacji sigmoidalna oraz tangens hiperboliczny.
+Eksperyment zostanie przeprowadzony dla suboptymalnych wartości z pierwszego eksperymentu: `K1' = 6, `K2' = 4, współczynnik uczenia to $0.1$, a liczba epok to $100$.
 
 \begin{figure}[H]
     \centering
@@ -666,23 +660,27 @@ Eksperyment zostanie przeprowadzony dla suboptymalnych wartości z eksperymentu 
     \caption{Zależność poprawności klasyfikacji od użytej funkcji przejścia}
     \label{fig:activ_1}
 \end{figure}
-Z użyciem tangensa hiperbolicznego jako funkcji przejścia, sieć miała najwyższą poprawność klasyfikacji wynoszącą 79,48.
-Różnica między pozostałymi funkcjami nie była jednak taka duża ($2.56$).
 
-Skrypt został uruchomiony ponownie, dla tych samych parametrów.
-Tym razem wynik był inny.
+Po zastosowaniu funkcji tangens hiperboliczny jako funkcji aktywacji, sieć osiągnęła najwyższą poprawność klasyfikacji wynoszącą $79.48\%$.
+Różnica w wynikach między pozostałymi funkcjami aktywacji nie była jednak znacząca (wyniosła $2.56\%$).
+Skrypt został uruchomiony ponownie, używając tych samych parametrów, jednak wynik okazał się inny.
+
 \begin{figure}[H]
     \centering
     \includegraphics[width=0.8\textwidth, keepaspectratio]{ACTIVATION_1_2.png}
     \caption{Zależność poprawności klasyfikacji od użytej funkcji przejścia}
     \label{fig:activ_2}
 \end{figure}
-Większą poprawnością klasyfikacji charakteryzowała się użyta funkcja sigmoidalna (82), natomiast tangens hiperboliczny 79.48 i ReLU 76.92.
-Powodem zmiany poprzedniego wyniku może być początkowe ustalenie wag, które odbywa się w sposób losowy.
-Oznacza to, że funkcja aktywacji w tym przypadku nie odgrywa tak znaczącej roli.
+
+Najwyższą poprawność klasyfikacji osiągnięto przy użyciu funkcji sigmoidalnej, która wynosiła $82\%$.
+Tangens hiperboliczny miał poprawność klasyfikacji na poziomie $79.48\%$, natomiast funkcja ReLU osiągnęła wynik $76.92\%$.
+Powodem zmiany względem poprzedniego wyniku może być losowy początkowy dobór wag, który ma miejsce podczas inicjalizacji sieci.
+To sugeruje, że w tym przypadku funkcja aktywacji nie odgrywa tak istotnej roli.
+
 \subsection{Eksperyment 8}
-Być może wynik zmieni się, gdy użyta zostanie większa liczba warstw oraz większa liczba neuronów w sieci.
-Teraz liczba warstw będzie wynosić 5, liczba neuronów dla każdej warstwy 100, współczynnik uczenia $0.1$, a liczba epok 1000.
+Możliwe, że wynik ulegnie zmianie, gdy zwiększona zostanie liczba warstw i liczba neuronów w sieci.
+W ósmym eksperymencie liczba warstw wynosić będzie 5, a liczba neuronów dla każdej warstwy będzie wynosić 100.
+Współczynnik uczenia będzie wynosił 0.1, a liczba epok zostanie zwiększona do 1000.
 
 \begin{figure}[H]
     \centering
@@ -692,11 +690,11 @@ Teraz liczba warstw będzie wynosić 5, liczba neuronów dla każdej warstwy 100
 \end{figure}
 
 W tym przypadku użyta funkcja aktywacji ma ogromne znaczenie.
-Tangens hiperboliczny osiągnął bardzo niski wynik poprawności klasyfikacji na poziomie 53.84.
-Funkcja ReLU oraz sigmoidalna uzyskały ten sam poziom 79.48.
+Tangens hiperboliczny osiągnął bardzo niski wynik poprawności klasyfikacji na poziomie $53.84\%$.
+Natomiast funkcja ReLU oraz sigmoidalna uzyskały identyczny wynik wynoszący $79.48\%$.
+Po ponownym uruchomieniu skryptu, tangens hiperboliczny znowu uzyskał najniższą poprawność klasyfikacji.
+Wynika z tego, że dla tych parametrów, dla warstw ukrytych najlepiej użyć funkcji ReLU lub funkcji sigmoidalnej.
 
-Gdy skrypt został uruchomiony ponownie tangens hiperboliczny znowu uzyskał najniższą poprawność klasyfikacji.
-Oznacza to, że dla takich parametrów najlepiej użyć funkcji ReLU lub sigmoidalnej.
 \section{Wnioski}
 Na podstawie przeprowadzonych eksperymentów można było dostrzec różne zachowania sieci w zależności od dobranych parametrów.
 Parametry można było dobrać w taki sposób, że liczba neuronów w sieci nie miała zbyt dużego wpływu na poprawność klasyfikacji.
