Opis dwóch pierwszych eksperymentów

--- a/main.tex
+++ b/main.tex
@@ -697,8 +697,8 @@ Wynika z tego, że dla tych parametrów, dla warstw ukrytych najlepiej użyć fu
 
 \section{Wnioski}
 Na podstawie przeprowadzonych eksperymentów można było dostrzec różne zachowania sieci w zależności od dobranych parametrów.
-Parametry można było dobrać w taki sposób, że liczba neuronów w sieci nie miała zbyt dużego wpływu na poprawność klasyfikacji.
-Miała jednak ogromny wpływ jeżeli chodzi o szybkość nauki, gdyż w eksperymencie drugim na koniec działania skryptu czekałem kilkanaście razy dłużej względem pierwszego.
+Parametry można było dobrać w taki sposób, że liczba neuronów w sieci nie miała dużego wpływu na poprawność klasyfikacji.
+Miała jednak ogromny wpływ jeżeli chodzi o szybkość nauki, gdyż m.in. w eksperymencie drugim na koniec działania skryptu czas oczekiwania wzrósł kilkunastokrotnie względem pierwszego.
 
 \begin{thebibliography}{9}
     \bibitem{Nielsen}
