--- a/main.tex
+++ b/main.tex
@@ -733,13 +733,14 @@ Wynika z tego, że dla tych parametrów, dla warstw ukrytych najlepiej użyć fu
 \newpage
 \section{Wnioski}
 Na podstawie przeprowadzonych eksperymentów można było dostrzec różne zachowania sieci w zależności od dobranych parametrów.
-Parametry można było dobrać w taki sposób, że rozmiar warstw w sieci nie miał dużego wpływu na poprawność klasyfikacji, która utrzymywała się na podobnym poziomie.
+
+Ustawienia można było dobrać w taki sposób, że rozmiar warstw w sieci nie miał dużego wpływu na poprawność klasyfikacji, która utrzymywała się na podobnym poziomie.
 Liczba neuronów w warstwie miała jednak ogromny wpływ jeżeli chodzi o szybkość nauki. Po zwiększeniu tej liczby w eksperymencie drugim, na koniec działania skryptu czas oczekiwania wzrósł kilkunastokrotnie względem pierwszego.
 
 Dzięki kolejnym eksperymentom można było zauważyć, że zmniejszanie współczynnika uczenia ma tendencję do zmniejszania stabilności sieci.
 Można wyciągnąć wniosek, że optymalne wyniki sieć uzyskiwała dla umiarkowanych wartości współczynnika uczenia.
 
-Następne eksperymenty wykazały, że dla pewnych metaparametrów, wybór funkcji aktywacji ma istotny wpływ na poprawność klasyfikacji.
+Następne eksperymenty wykazały, że dla pewnych parametrów, wybór funkcji aktywacji ma istotny wpływ na poprawność klasyfikacji.
 Najlepsze wyniki osiągnięto przy użyciu funkcji ReLU lub funkcji sigmoidalnej.
 Należy jednak pamiętać, że dla różnych kombinacji liczby warstw i neuronów wyniki mogą być zgoła inne.
 
