--- a/main.tex
+++ b/main.tex
@@ -737,8 +737,8 @@ Na podstawie przeprowadzonych eksperymentów można było dostrzec różne zacho
 Ustawienia można było dobrać w taki sposób, że rozmiar warstw w sieci nie miał dużego wpływu na poprawność klasyfikacji, która utrzymywała się na podobnym poziomie.
 Liczba neuronów w warstwie miała jednak ogromny wpływ jeżeli chodzi o szybkość nauki. Po zwiększeniu tej liczby w eksperymencie drugim, na koniec działania skryptu czas oczekiwania wzrósł kilkunastokrotnie względem pierwszego.
 
-Dzięki kolejnym eksperymentom można było zauważyć, że zmniejszanie współczynnika uczenia ma tendencję do zmniejszania stabilności sieci.
-Można wyciągnąć wniosek, że optymalne wyniki sieć uzyskiwała dla umiarkowanych wartości współczynnika uczenia.
+Dzięki kolejnym eksperymentom można było zauważyć, że zmniejszanie współczynnika uczenia z jednoczesnym zwiększaniem liczby warstw ma tendencję do zmniejszania stabilności sieci.
+Można wyciągnąć wniosek, że optymalne wyniki sieć uzyskiwała dla umiarkowanych wartości współczynnika uczenia i liczby warstw.
 
 Następne eksperymenty wykazały, że dla pewnych parametrów, wybór funkcji aktywacji ma istotny wpływ na poprawność klasyfikacji.
 Najlepsze wyniki osiągnięto przy użyciu funkcji ReLU lub funkcji sigmoidalnej.
