--- a/main.tex
+++ b/main.tex
@@ -587,6 +587,7 @@ Obliczana jest maksymalna poprawność klasyfikacji w zależności od użytej fu
 Dla każdego eksperymentu został użyty nieco inny skrypt.
 Pierwsze eksperymenty dotyczą rozmiaru warstw dla sieci trójwarstwowej, natomiast kolejne dotyczą zmian współczynniku uczenia, liczby warstw oraz funkcji przejścia.
 
+\newpage
 \subsection{Eksperyment 1}
 
 Eksperyment pierwszy został przeprowadzony dla przykładowych liczb neuronów będących wielokrotnościami liczby 2.
